--- a/wecodelab_web_client/package.json
+++ b/wecodelab_web_client/package.json
@@ -13,6 +13,7 @@
         "@types/react-dom": "^18.0.5",
         "@types/styled-components": "^5.1.25",
         "formik": "^2.2.9",
+        "python-shell": "^3.0.1",
         "react": "^18.1.0",
         "react-dom": "^18.1.0",
         "react-redux": "^8.0.2",
