--- a/wecodelab_web_client/package.json
+++ b/wecodelab_web_client/package.json
@@ -12,6 +12,7 @@
         "@types/react": "^18.0.9",
         "@types/react-dom": "^18.0.5",
         "@types/styled-components": "^5.1.25",
+        "axios": "^0.27.2",
         "formik": "^2.2.9",
         "python-shell": "^3.0.1",
         "react": "^18.1.0",
