--- a/wecodelab_web_client/package.json
+++ b/wecodelab_web_client/package.json
@@ -14,6 +14,7 @@
         "@types/styled-components": "^5.1.25",
         "axios": "^0.27.2",
         "formik": "^2.2.9",
+        "mysql": "^2.18.1",
         "python-shell": "^3.0.1",
         "react": "^18.1.0",
         "react-dom": "^18.1.0",
