--- a/package.json
+++ b/package.json
@@ -8,6 +8,6 @@
     "type": "module",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "nodemon index.cjs"
+        "start": "nodemon index.js"
     }
 }
