--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
         "axios": "^0.27.2",
         "express": "^4.18.1",
         "nodemon": "^2.0.18",
-        "public-ip": "^6.0.1"
+        "public-ip": "^6.0.1",
+        "request": "^2.88.2"
     },
     "type": "module",
     "scripts": {
